Implemented coroutines, simple recyclerview and adapter based on domain model

--- a/app/src/main/res/layout/fragment_conversion_list.xml
+++ b/app/src/main/res/layout/fragment_conversion_list.xml
@@ -7,21 +7,35 @@
         <variable
             name="conversionListViewModel"
             type="ilgulee.com.currencycalculator.ui.list.ConversionListViewModel" />
+
+        <variable
+            name="livequote"
+            type="ilgulee.com.currencycalculator.domain.LiveQuote" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:text="@{conversionListViewModel.response}"
+        <!--        <TextView-->
+        <!--            android:text="@{conversionListViewModel.response.toString()}"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="8dp"-->
+        <!--            android:layout_marginTop="8dp"-->
+        <!--            android:layout_marginEnd="8dp"-->
+        <!--            android:textAlignment="viewStart"-->
+        <!--            android:textSize="20sp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/conversion_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="viewStart"
-            android:textSize="20sp"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
